# triplecargo

./: .gitignore  CLI_REFERENCE.md  Cargo.toml  DATA_MODEL.md  README.md  TRIPLECARGO_ML_DEEP_DIVE.md  tmp_export.jsonl  toy_model_traindata.sh  trainset_gen.sh  val.jsonl
data/: cards.json
plans/: triplecargo_game_mvp_plan.md
src/: board.rs  cards.rs  hash.rs  lib.rs  persist.rs  persist_stream.rs  rng.rs  rules.rs  state.rs  types.rs
src/engine/: apply.rs  score.rs
src/solver/: graph.rs  graph_writer.rs  mod.rs  move_order.rs  negamax.rs  precompute.rs  tt.rs  tt_array.rs
tests/: async_writer_tests.rs  engine_tests.rs  eval_state_cli.rs  export_determinism_chunk_size.rs  export_determinism_tt_bytes.rs  export_soft_exact_policy.rs  export_state_hash.rs  fast_hands_unit.rs  graph_export_consistency.rs  graph_writer_frames.rs  incremental_tests.rs  nohash_plain_writer.rs  oracle_parity_graph_negamax.rs  persist_stream_tests.rs  rng_tests.rs  rule_edge_tests.rs  sharded_nodes_integration.rs  sharded_writer_unit.rs  solver_tests.rs  tt_capacity.rs  tt_parity.rs
