[package]
name = "triplecargo"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pretty_assertions = "1"

[[bin]]
name = "tt-cli"
path = "src/bin/tt-cli.rs"

[[bin]]
name = "precompute"
path = "src/bin/precompute.rs"