[package]
name = "triplecargo"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1"
bincode = "1"
indicatif = { version = "0.17", features = ["rayon"] }
hashbrown = "0.14"
ahash = "0.8"
lz4_flex = "0.11"
zstd = "0.13"
crc32fast = "1.4"
memmap2 = { version = "0.9", optional = true }
rand = "0.8"
rand_pcg = { version = "0.3.1" }

[dev-dependencies]
pretty_assertions = "1"
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[[bin]]
name = "tt-cli"
path = "src/bin/tt-cli.rs"

[[bin]]
name = "precompute"
path = "src/bin/precompute.rs"

[[bin]]
name = "query"
path = "src/bin/query.rs"

[features]
default = []
mmap = ["memmap2"]